New Features and Important Changes in GammaLib 1.6.0

8 June 2018


1. Introduction
---------------
This document briefly summarizes module by module the most important changes
made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been added:
- none

The following classes have been removed:
- none

The following classes have been renamed:
- none

The following methods have been added:
- gammalib::atan2()
- gammalib::plaw_integral()
- gammalib::gauss_integral()
- GSkyDir::cos_dist()
- GApplicationPar::query()
- GApplicationPar::was_queried()
- operator==(GSkyPixel&, GSkyPixel&)
- operator!=(GSkyPixel&, GSkyPixel&)
- GPha::operator(int&, int&)
- GPha::operator[](std::string&)
- GPha::columns()
- GPha::at(int&, int&)
- GPha::append(std::string&, std::vector<double>&)
- GPha::obs_emin(GEnergy&)
- GPha::obs_emin()
- GPha::obs_emax(GEnergy&)
- GPha::obs_emax()
- GCTAInstDir::theta()
- GCTAInstDir::phi()
- GCTAEventAtom(GCTAInstDir&, GEnergy&, GTime&)
- GCTABackground::rate_ebin()
- GCTABackgroundPerfTable::rate_ebin()
- GCTABackground3D::rate_ebin()
- GCTAEdisp::prob_erecobin()
- GCTAEdispPerfTable::prob_erecobin()
- GCTAEdispRmf::prob_erecobin()
- GCTAEdisp2D::prob_erecobin()
- GCTAModelRadialAcceptance::radial(GCTAModelRadial*)
- GCTAModelRadialAcceptance::spectral(GModelSpectral*)
- GCTAModelRadialAcceptance::temporal(GModelTemporal*)
- GModelSpatialRadialProfileGauss(GSkyDir&, double&)
- GModelSpatialRadialProfileGauss::sigma()

The following methods have been removed:
- none

The following methods have been renamed:
- none

The arguments for the following methods have been changed:
- GCTAOnOffObservation CTA observation constructor now takes a spatial model component

The return value of the following methods has been changed:
- none


3. Configuration
-----------------
Keep existing library path in installation script on Mac OS X (#2420)


4. Application module
---------------------